fixed some spacing

--- a/gymFairy.css
+++ b/gymFairy.css
@@ -30,6 +30,8 @@ ul {
     margin-bottom: 10px;
 }
 
+
+
 .quizStart {
     color: white;
     text-align: center;
@@ -62,6 +64,10 @@ span {
     color: white;
 }
 
+.answers {
+    margin-left: 30px;
+}
+
 fieldset {
     border:none;
 }
@@ -88,7 +94,9 @@ span:hover {
 }
 
 .submitButton {
-    margin-left: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
 }
 
